# prime-ble-firmware

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  REPRODUCIBILITY.md  cosign2-priv.pem  cosign2.toml  env-example  flake.nix  memory.x  run-with-docker.sh  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config  config.toml
.github/: CI_SECURITY.md
.github/workflows/: rust.yml
.reuse/: dep5
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: consts.rs  flash_bounds.rs  jump_app.rs  main.rs  update_state.rs  verify.rs
cobs-file-chuncker/: Cargo.toml  firmware
cobs-file-chuncker/src/: main.rs
cobs-file-chunker/src/: main.rs
cobs-gen/: Cargo.toml
cobs-gen/src/: main.rs
consts/: Cargo.toml
consts/src/: lib.rs
cosign2/: README.md  rustfmt.toml
cosign2/.github/workflows/: ci.yml
cosign2/cosign2/: Cargo.toml
cosign2/cosign2-bin/: Cargo.toml
cosign2/cosign2-bin/src/: main.rs
cosign2/cosign2-bin/src/args/: cli.rs  mod.rs
cosign2/cosign2-bin/src/tests/: input.rs  mod.rs
cosign2/cosign2/src/: lib.rs  tests.rs
firmware/: Cargo.toml  build.rs  memory unsigned_fw.x  memory.x  memory_s112_signed.x  memory_s112_unsigned.x  memory_s113_signed.x  memory_s113_unsigned.x  memory_unsigned_fw.x
firmware/.cargo/: config.toml
firmware/src/: comms.rs  consts.rs  main.rs  nus.rs  queue.rs  server.rs
host-ble/: Cargo.toml
host-ble/src/: main.rs
host-client/: Cargo.toml
host-client/src/: main.rs
host-protocol/: Cargo.toml
host-protocol/.cargo/: config.toml
host-protocol/examples/: host_control.rs
host-protocol/saleae-hla/: HighLevelAnalyzer.py  README.md  extension.json
host-protocol/src/: lib.rs
misc/: README_FOR_PROGRAMMING.md  docker_run_wrapper.sh  init_docker_image.sh
misc/srecord_linux/: srec_cat
misc/srecord_mac/: srec_cat
nix/: rust-toolchain.nix
src/: consts.rs  main.rs  nus.rs  server.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: bootloader_flash_bounds.rs
