# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "firmware",
    "bootloader",
    "host-protocol",
    "xtask",
]


[profile.release]
debug = 2
lto = true
opt-level = "s"  # Optimize for size
panic = "abort"
codegen-units = 1
