# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"

members = [
    "bootloader",
    "consts",
    "firmware",
    "host-ble",
    "host-protocol",
    "xtask",
]

[workspace.dependencies]
bitflags = "2.6.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
defmt = "0.3.10"
defmt-rtt = "0.4.0"
clap = { version = "4.5.27", features = ["derive"] }
crc = "3.2.1"
heapless = { version = "0.8.0", features = ["defmt-03"] }
hmac = "0.12.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
postcard = { version = "1.1.1", features = ["experimental-derive"] }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = "z"   # Optimize for size
panic = "abort"
codegen-units = 1
trim-paths = "all"
