# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
edition = "2021"
name = "bootloader"
version = "0.1.1"
publish = false

[features]
default = []

debug = []

# Choose which SoftDevice to use
s112 = ["nrf-softdevice/s112", "nrf-softdevice-s112"]
s113 = ["nrf-softdevice/s113", "nrf-softdevice-s113"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cosign2 = { git = "https://github.com/Foundation-Devices/keyOS", default-features = false }
crc = "3.2.1"
critical-section = "1.1"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "gpiote",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
fixed = "1.24.0"
futures = { version = "0.3.29", default-features = false }
hmac = "0.12.1"
micro-ecc-sys = { git = "https://github.com/Foundation-Devices/micro-ecc-sys.git", default-features = false }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = [
    "ble-peripheral",
    "critical-section-impl",
    "defmt",
    "evt-max-size-256",
    "nrf52805",
] }
nrf-softdevice-mbr = { version = "0.2.0" }
nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf52805-pac = "0.12.2"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", features = ["derive"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }
static_cell = "2.0.0"

[build-dependencies]
bindgen = "0.69.4"

[dependencies.host-protocol]
path = "../host-protocol"
