# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
edition = "2021"
name = "bootloader"
version = "0.1.1"
publish = false

[features]
debug = []

# Choose which SoftDevice to use
s112 = ["nrf-softdevice/s112", "nrf-softdevice-s112"]
s113 = ["nrf-softdevice/s113", "nrf-softdevice-s113"]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
cosign2 = { git = "https://github.com/Foundation-Devices/keyOS", default-features = false }
crc = { workspace = true }
critical-section = "1.1.2"
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "gpiote",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-storage = "0.3.1"
hmac = { workspace = true }
host-protocol = { path = "../host-protocol" }
micro-ecc-sys = { git = "https://github.com/Foundation-Devices/micro-ecc-sys.git", default-features = false }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = [
    "ble-peripheral",
    "critical-section-impl",
    "defmt",
    "evt-max-size-256",
    "nrf52805",
] }
nrf-softdevice-mbr = { version = "0.2.0" }
nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf52805-pac = "0.12.2"
panic-probe = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
# Need to keep it, because micro-ecc-sys depend on it
bindgen = "0.69.4"
