# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
edition = "2021"
name = "bootloader"
version = "2.0.0"
publish = false

[features]
debug = []

[dependencies]
consts_global = { path = "../consts", package = "consts" }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
cosign2 = { version = "0.4.1", git = "https://github.com/Foundation-Devices/keyOS", default-features = false }
crc = { workspace = true }
critical-section = "1.1.2"
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-storage = "0.3.1"
heapless = { workspace = true }
hmac = { workspace = true }
host-protocol = { path = "../host-protocol", default-features = false, features = [
    "no-cobs",
] }
micro-ecc-sys = { git = "https://github.com/Foundation-Devices/keyOS.git", default-features = false }
nrf-softdevice = { git = "https://github.com/Foundation-Devices/nrf-softdevice.git", rev = "566c1c2d7b269fa8f9addbc4473811b6b2b0f693", features = [
    "ble-peripheral",
    "critical-section-impl",
    "defmt",
    "evt-max-size-256",
    "nrf52805",
    "s113",
] }
nrf-softdevice-mbr = { version = "0.2.0", git = "https://github.com/Foundation-Devices/nrf-softdevice.git", rev = "566c1c2d7b269fa8f9addbc4473811b6b2b0f693" }
nrf-softdevice-s113 = { git = "https://github.com/Foundation-Devices/nrf-softdevice.git", rev = "566c1c2d7b269fa8f9addbc4473811b6b2b0f693" }
nrf52805-pac = "0.12.2"
panic-probe = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
# Need to keep it, because micro-ecc-sys depend on it
bindgen = "0.69.4"
consts_global = { path = "../consts", package = "consts" }
