# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
edition = "2021"
name = "firmware"
version = "0.1.1"
publish = false

[features]
debug = ["analytics"]

# Choose which SoftDevice to use
s112 = ["nrf-softdevice/s112", "nrf-softdevice-s112", "ble-phy2"]
s113 = ["nrf-softdevice/s113", "nrf-softdevice-s113", "consts/dle"]

# Print some statistics while running
analytics = []

# Ask central for PHY2
ble-phy2 = []

[dependencies]
atomic-pool = "1.0.1"
cobs = { version = "0.2.3", default-features = false }
consts = { path = "../consts" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "gpiote",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
fixed = "1.24.0"
futures = { version = "0.3.29", default-features = false }
heapless = { version = "0.8.0", features = ["defmt-03"] }
hmac = "0.12.1"
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = [
    "ble-gatt-client",
    "ble-gatt-server",
    "ble-peripheral",
    "ble-rssi",
    "ble-sec",
    "critical-section-impl",
    "defmt",
    "evt-max-size-512",
    "nrf52805",
] }
nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
postcard = { version = "1.0.8" }
serde = { version = "1.0.200", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
static_cell = "2.0.0"

[dependencies.host-protocol]
path = "../host-protocol"
