# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
edition = "2021"
name = "firmware"
version = "0.1.1"
publish = false

[features]
debug = ["analytics"]

# Choose which SoftDevice to use
s112 = ["nrf-softdevice/s112", "nrf-softdevice-s112", "consts/s112", "ble-phy2"]
s113 = [
    "nrf-softdevice/s113",
    "nrf-softdevice-s113",
    "consts/s113",
    "consts/dle",
]

# Hardware is on rev D
hw-rev-d = []

# Print some statistics while running
analytics = []

# Ask central for PHY2
ble-phy2 = []

[dependencies]
consts = { path = "../consts" }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "gpiote",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-io-async = { version = "0.6.1", features = [
    "defmt-03",
] } # only for revA
futures = { version = "0.3.31", default-features = false }
heapless = { workspace = true }
hmac = { workspace = true }
host-protocol = { path = "../host-protocol" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = [
    "ble-gatt-server",
    "ble-peripheral",
    "ble-rssi",
    "critical-section-impl",
    "defmt",
    "evt-max-size-512",
    "nrf52805",
] }
nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", optional = true }
panic-probe = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
static_cell = "2.1.0" # only for revA

[build-dependencies]
consts = { path = "../consts" }
