# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
edition = "2021"
name = "firmware"
version = "2.3.1"
publish = false

[features]
debug = ["analytics"]

# Print some statistics while running
analytics = []

# Ask central for PHY2
ble-phy2 = []

[dependencies]
consts = { path = "../consts", features = ["dle"] }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "gpiote",
    "nrf52805",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
futures = { version = "0.3.31", default-features = false }
heapless = { workspace = true }
hmac = { workspace = true }
host-protocol = { path = "../host-protocol", default-features = false, features = [
    "no-cobs",
] }
nrf52805-pac = "0.12.2"
nrf-softdevice = { git = "https://github.com/Foundation-Devices/nrf-softdevice.git", rev = "566c1c2d7b269fa8f9addbc4473811b6b2b0f693", features = [
    "ble-gatt-server",
    "ble-peripheral",
    "ble-rssi",
    "critical-section-impl",
    "defmt",
    "evt-max-size-512",
    "nrf52805",
    "s113",
] }
nrf-softdevice-s113 = { git = "https://github.com/Foundation-Devices/nrf-softdevice.git", rev = "566c1c2d7b269fa8f9addbc4473811b6b2b0f693" }
panic-probe = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
consts = { path = "../consts" }
