# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "host-ble"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.7", features = ["serde"] }
clap = { workspace = true }
consts = { path = "../consts" }
futures = { version = "0.3.31" }
pretty_env_logger = { version = "0.5.0" }
tokio = { version = "1.40.1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.11.0" }
