# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
edition = "2021"
name = "host-protocol"
description = "Communication protocol for uart using postcards"
version = "0.1.0"
publish = false

[dependencies]
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", features = ["derive"], default-features = false }

[dev-dependencies]
clap = { version = "4.5.21", features = ["derive"] }
pretty_env_logger = { version = "0.5.0" }
tokio = { version = "1.40.1", features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-serial = { version = "5.4.4" }
