# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
edition = "2021"
name = "host-protocol"
description = "Communication protocol for uart using postcards"
version = "1.0.0"
publish = false

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
postcard = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
crc = { workspace = true }
pretty_env_logger = { version = "0.5.0" }
tokio = { version = "1.40.1", features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-serial = { version = "5.4.4" }

[features]
default = ["no-cobs"]
no-cobs = []
