# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
description = "Cargo based builder for bluetooth single file package"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { workspace = true }
ihex = "3.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
